--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -16,7 +16,7 @@
   font-family: var(--font-geist-sans);
 }
 
-/* Featured Section */
+/* Featured Section and Product catalog*/
 .featuredSection {
   max-width: 80%;
   margin: 0 auto;
@@ -61,35 +61,67 @@
 .featuredcard {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   flex: 1;
   box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.675);
   border-radius: 0.5rem;
   img {
     width: 100%;
-    height: auto;
+    height: 260px;
+    object-fit: cover;
     align-self: center;
     padding: 0;
     margin: 0;
     border-top-left-radius: 0.5rem;
     border-top-right-radius: 0.5rem;
   }
-  p,
-  h3,
-  .addToCart {
-    margin: 0.5rem 0.5rem;
+  .productInfo {
+    margin: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    > :first-child {
+      flex: 3;
+    }
+    > :nth-child(2) {
+      flex: 1;
+    }
+    > :nth-child(3) {
+      flex: 2;
+    }
   }
+
   h3 {
     margin-bottom: 0;
   }
-  .addToCart {
-    max-width: 150px;
+  .productButton {
+    max-width: 100px;
     align-self: center;
     background-color: rgb(237, 237, 237);  
     border: 1px solid lightgrey;
+    padding: .3rem;
+    margin: .5rem;
+    white-space: nowrap;
+
   }
-  .addToCart:hover {
+  .productButton:hover {
     cursor: pointer;
     background-color: rgba(0, 0, 0, 0.147);
+  }
+  .cardPrice {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+  }
+  .link {
+    text-align: center;
+    padding-bottom: .5rem;
+    color: var(--color-accent);
+    font-weight: 500;
+  }
+  .link:hover {
+    font-weight: 700;
   }
 }
 
