--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -622,8 +622,8 @@ button:hover {
   position: absolute;
   top: -8px;
   right: -10px;
-  background: #d77a28;
-  color: white;
+  background: f38a2f;
+  color: #351a0f;
   border-radius: 50%;
   font-size: 0.7rem;
   padding: 2px 5px;
